--- a/InfinityStore/Infinity.Store/Resources/Views.Shared._Layout.vi.resx
+++ b/InfinityStore/Infinity.Store/Resources/Views.Shared._Layout.vi.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Testing" xml:space="preserve">
-    <value>Kiểm Tra</value>
+  <data name="Login" xml:space="preserve">
+    <value>Đăng Nhập</value>
+  </data>
+  <data name="Register" xml:space="preserve">
+    <value>Đăng Ký</value>
   </data>
 </root>
