--- a/InfinityStore/Infinity.Store/Resources/Views.Shared._Layout.vi.resx
+++ b/InfinityStore/Infinity.Store/Resources/Views.Shared._Layout.vi.resx
@@ -117,14 +117,53 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About Us" xml:space="preserve">
+    <value>Về Chúng Tôi</value>
+  </data>
+  <data name="Address" xml:space="preserve">
+    <value>Địa chỉ</value>
+  </data>
   <data name="All Categories" xml:space="preserve">
     <value>Tất cả</value>
+  </data>
+  <data name="All rights reserved by" xml:space="preserve">
+    <value>Thuộc hoàn toàn về</value>
+  </data>
+  <data name="Contact" xml:space="preserve">
+    <value>Liên Hệ</value>
+  </data>
+  <data name="Copyright" xml:space="preserve">
+    <value>Bản quyền năm</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="Enter Your Mail" xml:space="preserve">
+    <value>Nhập email của bạn</value>
+  </data>
+  <data name="Get E-mail updates about our latest shop and special offers" xml:space="preserve">
+    <value>Nhận cập nhật qua email về cửa hàng mới nhất của chúng tôi và các ưu đãi đặc biệt</value>
+  </data>
+  <data name="Information" xml:space="preserve">
+    <value>Thông Tin</value>
+  </data>
+  <data name="Join Our Newsletter Now" xml:space="preserve">
+    <value>Nhận Tin Tức Mới Nhất Ngay</value>
   </data>
   <data name="Login" xml:space="preserve">
     <value>Đăng Nhập</value>
   </data>
+  <data name="Phone" xml:space="preserve">
+    <value>Hotline</value>
+  </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Chính Sách Bảo Mật</value>
+  </data>
   <data name="Register" xml:space="preserve">
     <value>Đăng Ký</value>
+  </data>
+  <data name="Subscribe" xml:space="preserve">
+    <value>Đăng ký</value>
   </data>
   <data name="What do you need?" xml:space="preserve">
     <value>Bạn cần tìm gì?</value>
